[package]
name = "LunarSandbox"
version = "0.1.0"
authors = ["Akshant Lanjewar <akshant.lanjewar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
winit = "0.18"
LunarEngine = { path = "LunarEngine" }
